JDK-8352869