@@ -25,33 +25,76 @@ package compiler.lib.verify;
 
 import java.util.Optional;
 import java.lang.foreign.*;
+import java.lang.reflect.Method;
+import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
+import java.util.HashMap;
+import java.util.ArrayList;
+
 
 /**
- * The {@link Verify} class provides a single {@link Verify#checkEQ} static method, which recursively
- * compares the two {@link Object}s by value. It deconstructs {@link Object[]}, compares boxed primitive
- * types, and compares the content of arrays and {@link MemorySegment}s.
+ * The {@link Verify} class provides {@link Verify#checkEQ}, which recursively compares the two
+ * {@link Object}s by value. It deconstructs {@link Object[]}, compares boxed primitive types,
+ * compares the content of arrays and {@link MemorySegment}s, and checks that the messages of two
+ * {@link Exception}s are equal. It also checks for the equivalent content in {@code Vector}s from
+ * the Vector API.
  *
+ * <p>
  * When a comparison fail, then methods print helpful messages, before throwing a {@link VerifyException}.
+ *
+ * <p>
+ * We have to take special care of {@link Float}s and {@link Double}s, since they have both various
+ * encodings for NaN values, but on Java specification they are to be regarded as equal. Hence, we
+ * have two modes of comparison, specified by {@code isFloatCheckWithRawBits}. By default, it is
+ * disabled, and different NaN values are regarded as equal. This applies to the boxed floating types,
+ * as well as arrays of floating arrays. When {@code isFloatCheckWithRawBits} is enabled, we compare
+ * the raw bits, and so different NaN encodings are not equal. Note: {@link MemorySegment} data is
+ * always compared with raw bits.
+ *
+ * <p>
+ * By default, we only support comparison of the types mentioned above. However, in some cases one
+ * might want to compare Objects of arbitrare classes by value, i.e. the recursive structure given
+ * by their field values. This feature can be enabled with {@code isCheckWithArbitraryClasses}.
  */
 public final class Verify {
+    private final boolean isFloatCheckWithRawBits;
+    private final boolean isCheckWithArbitraryClasses;
+    private final HashMap<Object, Object> a2b = new HashMap<>();
+    private final HashMap<Object, Object> b2a = new HashMap<>();
 
-    private Verify() {}
+    private Verify(boolean isFloatCheckWithRawBits, boolean isCheckWithArbitraryClasses) {
+        this.isFloatCheckWithRawBits = isFloatCheckWithRawBits;
+        this.isCheckWithArbitraryClasses = isCheckWithArbitraryClasses;
+    }
 
     /**
-     * Verify the content of two Objects, possibly recursively. Only limited types are implemented.
+     * Verify the content of two Objects, possibly recursively.
+     *
+     * @param a First object to be recursively compared with the second.
+     * @param b Second object to be recursively compared with the first.
+     * @param isFloatCheckWithRawBits Determines if different NaN encodings are equal or not.
+     * @param isCheckWithArbitraryClasses Determines if the structural comparison of Objects from arbitrary classes is enabled.
+     * @throws VerifyException If the comparison fails.
+     */
+    public static void checkEQ(Object a, Object b, boolean isFloatCheckWithRawBits, boolean isCheckWithArbitraryClasses) {
+        Verify v = new Verify(isFloatCheckWithRawBits, isCheckWithArbitraryClasses);
+        v.checkEQdispatch(a, b, "<root>", null, null);
+    }
+
+    /**
+     * Verify the content of two Objects, possibly recursively.
+     * Only limited types are implemented (no arbitrary classes).
+     * Different NaN encodins are considered equal.
      *
      * @param a First object to be recursively compared with the second.
      * @param b Second object to be recursively compared with the first.
      * @throws VerifyException If the comparison fails.
      */
     public static void checkEQ(Object a, Object b) {
-        checkEQ(a, b, "");
+        checkEQ(a, b, false, false);
     }
 
-    /**
-     * Verify the content of two Objects, possibly recursively. Only limited types are implemented.
-     */
-    private static void checkEQ(Object a, Object b, String context) {
+    private void checkEQdispatch(Object a, Object b, String field, Object aParent, Object bParent) {
         // Both null
         if (a == null && b == null) {
             return;
@@ -60,8 +103,7 @@ public final class Verify {
         // Null mismatch
         if (a == null || b == null) {
             System.err.println("ERROR: Verify.checkEQ failed: null mismatch");
-            print(a, "a " + context);
-            print(b, "b " + context);
+            print(a, b, field, aParent, bParent);
             throw new VerifyException("Object array null mismatch.");
         }
 
@@ -71,33 +113,67 @@ public final class Verify {
         if (ca != cb) {
             System.err.println("ERROR: Verify.checkEQ failed: class mismatch.");
             System.err.println("       " + ca.getName() + " vs " + cb.getName());
-            print(a, "a " + context);
-            print(b, "b " + context);
+            print(a, b, field, aParent, bParent);
             throw new VerifyException("Object class mismatch.");
         }
 
+        // Already visited? This makes sure that we are not stuck in cycles, and that we have
+        // a mapping of pairs (a, b) for structurally equivalent Objects.
+        if (checkAlreadyVisited(a, b, field, aParent, bParent)) {
+            return;
+        }
+
         switch (a) {
-            case Object[]  x -> checkEQimpl(x, (Object[])b,                context);
-            case Byte      x -> checkEQimpl(x, ((Byte)b).byteValue(),      context);
-            case Character x -> checkEQimpl(x, ((Character)b).charValue(), context);
-            case Short     x -> checkEQimpl(x, ((Short)b).shortValue(),    context);
-            case Integer   x -> checkEQimpl(x, ((Integer)b).intValue(),    context);
-            case Long      x -> checkEQimpl(x, ((Long)b).longValue(),      context);
-            case Float     x -> checkEQimpl(x, ((Float)b).floatValue(),    context);
-            case Double    x -> checkEQimpl(x, ((Double)b).doubleValue(),  context);
-            case byte[]    x -> checkEQimpl(x, (byte[])b,                  context);
-            case char[]    x -> checkEQimpl(x, (char[])b,                  context);
-            case short[]   x -> checkEQimpl(x, (short[])b,                 context);
-            case int[]     x -> checkEQimpl(x, (int[])b,                   context);
-            case long[]    x -> checkEQimpl(x, (long[])b,                  context);
-            case float[]   x -> checkEQimpl(x, (float[])b,                 context);
-            case double[]  x -> checkEQimpl(x, (double[])b,                context);
-            case MemorySegment x -> checkEQimpl(x, (MemorySegment) b,      context);
+            case Object[]  x -> checkEQimpl(x, (Object[])b,                 field, aParent, bParent);
+            case Byte      x -> checkEQimpl(x, ((Byte)b).byteValue(),       field, aParent, bParent);
+            case Character x -> checkEQimpl(x, ((Character)b).charValue(),  field, aParent, bParent);
+            case Short     x -> checkEQimpl(x, ((Short)b).shortValue(),     field, aParent, bParent);
+            case Integer   x -> checkEQimpl(x, ((Integer)b).intValue(),     field, aParent, bParent);
+            case Long      x -> checkEQimpl(x, ((Long)b).longValue(),       field, aParent, bParent);
+            case Float     x -> checkEQimpl(x, ((Float)b).floatValue(),     field, aParent, bParent);
+            case Double    x -> checkEQimpl(x, ((Double)b).doubleValue(),   field, aParent, bParent);
+            case Boolean   x -> checkEQimpl(x, ((Boolean)b).booleanValue(), field, aParent, bParent);
+            case byte[]    x -> checkEQimpl(x, (byte[])b,                   field, aParent, bParent);
+            case char[]    x -> checkEQimpl(x, (char[])b,                   field, aParent, bParent);
+            case short[]   x -> checkEQimpl(x, (short[])b,                  field, aParent, bParent);
+            case int[]     x -> checkEQimpl(x, (int[])b,                    field, aParent, bParent);
+            case long[]    x -> checkEQimpl(x, (long[])b,                   field, aParent, bParent);
+            case float[]   x -> checkEQimpl(x, (float[])b,                  field, aParent, bParent);
+            case double[]  x -> checkEQimpl(x, (double[])b,                 field, aParent, bParent);
+            case boolean[] x -> checkEQimpl(x, (boolean[])b,                field, aParent, bParent);
+            case MemorySegment x -> checkEQimpl(x, (MemorySegment) b,       field, aParent, bParent);
+            case Exception x -> checkEQimpl(x, (Exception) b,               field, aParent, bParent);
             default -> {
-                System.err.println("ERROR: Verify.checkEQ failed: type not supported: " + ca.getName());
-                print(a, "a " + context);
-                print(b, "b " + context);
-                throw new VerifyException("Object array type not supported: " + ca.getName());
+                if (ca.getName().startsWith("jdk.incubator.vector") && ca.getName().contains("Vector")) {
+                    // We do not want to import jdk.incubator.vector explicitly, because it would mean we would also have
+                    // to add "--add-modules=jdk.incubator.vector" to the command-line of every test that uses the Verify
+                    // class. So we hack this via reflection.
+                    Object va = null;
+                    Object vb = null;
+                    try {
+                        Method m = ca.getMethod("toArray");
+                        m.setAccessible(true);
+                        va = m.invoke(a);
+                        vb = m.invoke(b);
+                    } catch (NoSuchMethodException e) {
+                        throw new RuntimeException("Could not invoke toArray on " + ca.getName(), e);
+                    } catch (IllegalAccessException e) {
+                        throw new RuntimeException("Could not invoke toArray on " + ca.getName(), e);
+                    } catch (InvocationTargetException e) {
+                        throw new RuntimeException("Could not invoke toArray on " + ca.getName(), e);
+                    }
+                    checkEQdispatch(va, vb, field + ".toArray", aParent, bParent);
+                    return;
+                }
+
+                if (isCheckWithArbitraryClasses) {
+                    checkEQArbitraryClasses(a, b);
+                    return;
+                } else {
+                    System.err.println("ERROR: Verify.checkEQ failed: type not supported: " + ca.getName());
+                    print(a, b, field, aParent, bParent);
+                    throw new VerifyException("Object type not supported: " + ca.getName() + " -- did you mean to enable 'isCheckWithArbitraryClasses'?");
+                }
             }
         }
     }
@@ -105,9 +181,10 @@ public final class Verify {
     /**
      * Verify that two bytes are identical.
      */
-    private static void checkEQimpl(byte a, byte b, String context) {
+    private void checkEQimpl(byte a, byte b, String field, Object aParent, Object bParent) {
         if (a != b) {
-            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + a + " vs " + b + " for " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + a + " vs " + b);
+            print(a, b, field, aParent, bParent);
             throw new VerifyException("Value mismatch: " + a + " vs " + b);
         }
     }
@@ -115,9 +192,10 @@ public final class Verify {
     /**
      * Verify that two chars are identical.
      */
-    private static void checkEQimpl(char a, char b, String context) {
+    private void checkEQimpl(char a, char b, String field, Object aParent, Object bParent) {
         if (a != b) {
-            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + (int)a + " vs " + (int)b + " for " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + (int)a + " vs " + (int)b);
+            print(a, b, field, aParent, bParent);
             throw new VerifyException("Value mismatch: " + (int)a + " vs " + (int)b);
         }
     }
@@ -125,9 +203,10 @@ public final class Verify {
     /**
      * Verify that two shorts are identical.
      */
-    private static void checkEQimpl(short a, short b, String context) {
+    private void checkEQimpl(short a, short b, String field, Object aParent, Object bParent) {
         if (a != b) {
-            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + (int)a + " vs " + (int)b + " for " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + (int)a + " vs " + (int)b);
+            print(a, b, field, aParent, bParent);
             throw new VerifyException("Value mismatch: " + (int)a + " vs " + (int)b);
         }
     }
@@ -135,9 +214,10 @@ public final class Verify {
     /**
      * Verify that two ints are identical.
      */
-    private static void checkEQimpl(int a, int b, String context) {
+    private void checkEQimpl(int a, int b, String field, Object aParent, Object bParent) {
         if (a != b) {
-            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + a + " vs " + b + " for " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + a + " vs " + b);
+            print(a, b, field, aParent, bParent);
             throw new VerifyException("Value mismatch: " + a + " vs " + b);
         }
     }
@@ -145,33 +225,70 @@ public final class Verify {
     /**
      * Verify that two longs are identical.
      */
-    private static void checkEQimpl(long a, long b, String context) {
+    private void checkEQimpl(long a, long b, String field, Object aParent, Object bParent) {
         if (a != b) {
-            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + a + " vs " + b + " for " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + a + " vs " + b);
+            print(a, b, field, aParent, bParent);
             throw new VerifyException("Value mismatch: " + a + " vs " + b);
         }
     }
 
     /**
-     * Verify that two floats have identical bits.
+     * There are two comparison modes: one where we compare the raw bits, which sees different NaN
+     * encodings as different values, and one where we see all NaN encodings as identical.
+     * Ideally, we would want to assert that the Float.floatToRawIntBits are identical.
+     * But the Java spec allows us to return different bits for a NaN, which allows swapping the inputs
+     * of an add or mul (NaN1 * NaN2 does not have same bits as NaN2 * NaN1, because the multiplication
+     * of two NaN values should always return the first of the two).
+     * Hence, by default, we pick the non-raw coparison: we verify that we have the same bit
+     * pattern in all cases, except for NaN we project to the canonical NaN, using Float.floatToIntBits.
      */
-    private static void checkEQimpl(float a, float b, String context) {
-        if (Float.floatToRawIntBits(a) != Float.floatToRawIntBits(b)) {
-            System.err.println("ERROR: Verify.checkEQ failed: value mismatch for " + context);
-            System.err.println("       Values: " + a + " vs " + b);
-            System.err.println("       Values: " + Float.floatToRawIntBits(a) + " vs " + Float.floatToRawIntBits(b));
+    private boolean isFloatEQ(float a, float b) {
+        return isFloatCheckWithRawBits ? Float.floatToRawIntBits(a) != Float.floatToRawIntBits(b)
+                                       : Float.floatToIntBits(a) != Float.floatToIntBits(b);
+    }
+
+    /**
+     * See comments for "isFloatEQ".
+     */
+    private boolean isDoubleEQ(double a, double b) {
+        return isFloatCheckWithRawBits ? Double.doubleToRawLongBits(a) != Double.doubleToRawLongBits(b)
+                                       : Double.doubleToLongBits(a) != Double.doubleToLongBits(b);
+    }
+
+    /**
+     * Check that two floats are equal according to "isFloatEQ".
+     */
+    private void checkEQimpl(float a, float b, String field, Object aParent, Object bParent) {
+        if (isFloatEQ(a, b)) {
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch. check raw: " + isFloatCheckWithRawBits);
+            System.err.println("  Values: " + a + " vs " + b);
+            System.err.println("  Raw:    " + Float.floatToRawIntBits(a) + " vs " + Float.floatToRawIntBits(b));
+            print(a, b, field, aParent, bParent);
             throw new VerifyException("Value mismatch: " + a + " vs " + b);
         }
     }
 
     /**
-     * Verify that two doubles have identical bits.
+     * Check that two doubles are equal according to "isDoubleEQ".
      */
-    private static void checkEQimpl(double a, double b, String context) {
-        if (Double.doubleToRawLongBits(a) != Double.doubleToRawLongBits(b)) {
-            System.err.println("ERROR: Verify.checkEQ failed: value mismatch for " + context);
+    private void checkEQimpl(double a, double b, String field, Object aParent, Object bParent) {
+        if (isDoubleEQ(a, b)) {
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch. check raw: " + isFloatCheckWithRawBits);
             System.err.println("       Values: " + a + " vs " + b);
-            System.err.println("       Values: " + Double.doubleToRawLongBits(a) + " vs " + Double.doubleToRawLongBits(b));
+            System.err.println("       Raw:    " + Double.doubleToRawLongBits(a) + " vs " + Double.doubleToRawLongBits(b));
+            print(a, b, field, aParent, bParent);
+            throw new VerifyException("Value mismatch: " + a + " vs " + b);
+        }
+    }
+
+    /**
+     * Verify that two booleans are identical.
+     */
+    private void checkEQimpl(boolean a, boolean b, String field, Object aParent, Object bParent) {
+        if (a != b) {
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + a + " vs " + b);
+            print(a, b, field, aParent, bParent);
             throw new VerifyException("Value mismatch: " + a + " vs " + b);
         }
     }
@@ -180,15 +297,16 @@ public final class Verify {
      * Verify that the content of two MemorySegments is identical. Note: we do not check the
      * backing type, only the size and content.
      */
-    private static void checkEQimpl(MemorySegment a, MemorySegment b, String context) {
+    private void checkEQimpl(MemorySegment a, MemorySegment b, String field, Object aParent, Object bParent) {
         long offset = a.mismatch(b);
         if (offset == -1) { return; }
 
         // Print some general info
-        System.err.println("ERROR: Verify.checkEQ failed for: " + context);
+        System.err.println("ERROR: Verify.checkEQ failed");
 
-        printMemorySegment(a, "a " + context);
-        printMemorySegment(b, "b " + context);
+        print(a, b, field, aParent, bParent);
+        printMemorySegment(a, "a");
+        printMemorySegment(b, "b");
 
         // (1) Mismatch on size
         if (a.byteSize() != b.byteSize()) {
@@ -203,82 +321,199 @@ public final class Verify {
     }
 
     /**
+     * Verify that the content of two MemorySegments is identical. Note: we do not check the
+     * backing type, only the size and content.
+     */
+    private void checkEQimpl(Exception a, Exception b, String field, Object aParent, Object bParent) {
+        String am = a.getMessage();
+        String bm = b.getMessage();
+
+        // Missing messages is expected, but if they both have one, they must agree.
+        if (am == null || bm == null) { return; }
+        if (am.equals(bm)) { return; }
+
+        System.err.println("ERROR: Verify.checkEQ failed:");
+        System.out.println("a: " + a.getMessage());
+        System.out.println("b: " + b.getMessage());
+        print(a, b, field, aParent, bParent);
+        throw new VerifyException("Exception message mismatch: " + a + " vs " + b);
+    }
+
+    /**
      * Verify that the content of two byte arrays is identical.
      */
-    private static void checkEQimpl(byte[] a, byte[] b, String context) {
-        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), context);
+    private void checkEQimpl(byte[] a, byte[] b, String field, Object aParent, Object bParent) {
+        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), field + " -> to MemorySegment", aParent, bParent);
     }
 
     /**
      * Verify that the content of two char arrays is identical.
      */
-    private static void checkEQimpl(char[] a, char[] b, String context) {
-        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), context);
+    private void checkEQimpl(char[] a, char[] b, String field, Object aParent, Object bParent) {
+        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), field + " -> to MemorySegment", aParent, bParent);
     }
 
     /**
      * Verify that the content of two short arrays is identical.
      */
-    private static void checkEQimpl(short[] a, short[] b, String context) {
-        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), context);
+    private void checkEQimpl(short[] a, short[] b, String field, Object aParent, Object bParent) {
+        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), field + " -> to MemorySegment", aParent, bParent);
     }
 
     /**
      * Verify that the content of two int arrays is identical.
      */
-    private static void checkEQimpl(int[] a, int[] b, String context) {
-        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), context);
+    private void checkEQimpl(int[] a, int[] b, String field, Object aParent, Object bParent) {
+        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), field + " -> to MemorySegment", aParent, bParent);
     }
 
     /**
      * Verify that the content of two long arrays is identical.
      */
-    private static void checkEQimpl(long[] a, long[] b, String context) {
-        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), context);
+    private void checkEQimpl(long[] a, long[] b, String field, Object aParent, Object bParent) {
+        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), field + " -> to MemorySegment", aParent, bParent);
     }
 
     /**
-     * Verify that the content of two float arrays is identical.
+     * Check that two float arrays are equal according to "isFloatEQ".
      */
-    private static void checkEQimpl(float[] a, float[] b, String context) {
-        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), context);
+    private void checkEQimpl(float[] a, float[] b, String field, Object aParent, Object bParent) {
+        if (a.length != b.length) {
+            System.err.println("ERROR: Verify.checkEQ failed: length mismatch: " + a.length + " vs " + b.length);
+            print(a, b, field, aParent, bParent);
+            throw new VerifyException("Float array length mismatch.");
+        }
+
+        for (int i = 0; i < a.length; i++) {
+            if (isFloatEQ(a[i], b[i])) {
+                System.err.println("ERROR: Verify.checkEQ failed: value mismatch at " + i + ": " + a[i] + " vs " + b[i] + ". check raw: " + isFloatCheckWithRawBits);
+                print(a, b, field, aParent, bParent);
+                throw new VerifyException("Float array value mismatch " + a[i] + " vs " + b[i]);
+            }
+        }
     }
 
     /**
-     * Verify that the content of two double arrays is identical.
+     * Check that two double arrays are equal according to "isDoubleEQ".
      */
-    private static void checkEQimpl(double[] a, double[] b, String context) {
-        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), context);
+    private void checkEQimpl(double[] a, double[] b, String field, Object aParent, Object bParent) {
+        if (a.length != b.length) {
+            System.err.println("ERROR: Verify.checkEQ failed: length mismatch: " + a.length + " vs " + b.length);
+            print(a, b, field, aParent, bParent);
+            throw new VerifyException("Double array length mismatch.");
+        }
+
+        for (int i = 0; i < a.length; i++) {
+            if (isDoubleEQ(a[i], b[i])) {
+                System.err.println("ERROR: Verify.checkEQ failed: value mismatch at " + i + ": " + a[i] + " vs " + b[i] + ". check raw: " + isFloatCheckWithRawBits);
+                print(a, b, field, aParent, bParent);
+                throw new VerifyException("Double array value mismatch " + a[i] + " vs " + b[i]);
+            }
+        }
+    }
+
+    /**
+     * Verify that the content of two boolean arrays is identical.
+     */
+    private void checkEQimpl(boolean[] a, boolean[] b, String field, Object aParent, Object bParent) {
+        if (a.length != b.length) {
+            System.err.println("ERROR: Verify.checkEQ failed: length mismatch: " + a.length + " vs " + b.length);
+            print(a, b, field, aParent, bParent);
+            throw new VerifyException("Boolean array length mismatch.");
+        }
+
+        for (int i = 0; i < a.length; i++) {
+            if (a[i] != b[i]) {
+                System.err.println("ERROR: Verify.checkEQ failed: value mismatch at " + i + ": " + a[i] + " vs " + b[i]);
+                print(a, b, field, aParent, bParent);
+                throw new VerifyException("Boolean array value mismatch.");
+            }
+        }
     }
 
     /**
      * Verify that the content of two Object arrays is identical, recursively:
      * every element is compared with checkEQimpl for the corresponding type.
      */
-    private static void checkEQimpl(Object[] a, Object[] b, String context) {
+    private void checkEQimpl(Object[] a, Object[] b, String field, Object aParent, Object bParent) {
         // (1) Length mismatch
         if (a.length != b.length) {
             System.err.println("ERROR: Verify.checkEQ failed: length mismatch: " + a.length + " vs " + b.length);
+            print(a, b, field, aParent, bParent);
             throw new VerifyException("Object array length mismatch.");
         }
 
         for (int i = 0; i < a.length; i++) {
             // Recursive checkEQ call.
-            checkEQ(a[i], b[i], "[" + i + "]" + context);
+            checkEQdispatch(a[i], b[i], "[" + i + "]", a, b);
         }
     }
 
-    private static void print(Object a, String context) {
-        if (a == null) {
-            System.err.println("  " + context + ": null");
+    private void checkEQArbitraryClasses(Object a, Object b) {
+        Class c = a.getClass();
+        while (c != Object.class) {
+            for (Field field : c.getDeclaredFields()) {
+                Object va = null;
+                Object vb = null;
+                try {
+                    field.setAccessible(true);
+                    va = field.get(a);
+                    vb = field.get(b);
+                } catch (IllegalAccessException e) {
+                    throw new VerifyException("Failure to access field: " + field + " of " + a);
+                }
+                checkEQdispatch(va, vb, field.getName(), a, b);
+            }
+            c = c.getSuperclass();
+        }
+    }
+
+    private void print(Object a, Object b, String field, Object aParent, Object bParent) {
+        System.err.println("  aParent: " + aParent);
+        System.err.println("  bParent: " + bParent);
+        System.err.println("  field:   " + field);
+        System.err.println("  a:       " + a);
+        System.err.println("  b:       " + b);
+    }
+
+    private boolean checkAlreadyVisited(Object a, Object b, String field, Object aParent, Object bParent) {
+        // Boxed primitives are not guaranteed to be the same Object for the same primitive value.
+        // Hence, we cannot use the mapping below. We test these boxed primitive types by value anyway,
+        // and they are no recursive structures, so there is no point in optimizing here anyway.
+        switch(a) {
+            case Boolean x -> { return false; }
+            case Byte x -> { return false; }
+            case Short x -> { return false; }
+            case Character x -> { return false; }
+            case Integer x -> { return false; }
+            case Long x -> { return false; }
+            case Float x -> { return false; }
+            case Double x -> { return false; }
+            default -> {}
+        }
+
+        Object bPrevious = a2b.get(a);
+        Object aPrevious = b2a.get(b);
+        if (aPrevious == null && bPrevious == null) {
+            // Record for next time.
+            a2b.put(a, b);
+            b2a.put(b, a);
+            return false;
         } else {
-            System.err.println("  " + context + ": " + a);
+            if (a != aPrevious || b != bPrevious) {
+                System.err.println("ERROR: Verify.checkEQ failed:");
+                print(a, b, field, aParent, bParent);
+                System.err.println("  aPrevious: " + aPrevious);
+                System.err.println("  bPrevious: " + bPrevious);
+                throw new VerifyException("Mismatch with previous pair.");
+            }
+            return true;
         }
     }
 
-    private static void printMemorySegment(MemorySegment a, String context) {
+    private void printMemorySegment(MemorySegment a, String name) {
         Optional<Object> maybeBase = a.heapBase();
-        System.err.println("  " + context + " via MemorySegment:");
+        System.err.println("  MemorySegment " + name + ":");
         if (maybeBase.isEmpty()) {
             System.err.println("    no heap base (native).");
         } else {
@@ -289,7 +524,7 @@ public final class Verify {
         System.err.println("    byteSize: " + a.byteSize());
     }
 
-    private static void printMemorySegmentValue(MemorySegment a, long offset, int range) {
+    private void printMemorySegmentValue(MemorySegment a, long offset, int range) {
         long start = Long.max(offset - range, 0);
         long end   = Long.min(offset + range, a.byteSize());
         for (long i = start; i < end; i++) {
